src/test/deca/syntax/valid/parser/extension/TAB_cast_with_tab.deca
{
    int[] x = new int[0];
    (int[]) (50);
    (int) (x[0]);
}