src/test/deca/syntax/invalid/parser/extension/initialization_missing_bracketL.deca
{
    int a[] = new int 100];
}